# MLops_MongoDB_Setup

./: README.md  main.py  pyproject.toml
notebook/: mongodb_demo.ipynb
