[project]
name = "mlops-mongodb-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.90",
    "botocore>=1.42.90",
    "certifi>=2026.2.25",
    "dill>=0.4.1",
    "fastapi>=0.136.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "mypy-boto3-s3>=1.42.85",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.44.0",
]
